# DeepDive

./: .gitignore  CLAUDE.md  README.md  worklog.md
Boris/: 2026-04-26.html  (+16 more)
experiments/Dong/: .env.example  .gitignore  NOTES.md  proposal-v2.md  pyproject.toml  spec.md
experiments/Dong/briefs/: 2026-04-26.md  2026-04-27.md  2026-05-09.md  2026-05-10.md
experiments/Dong/config/: sources.yaml
experiments/Dong/data/2026-04-26/: ranked.json
experiments/Dong/data/2026-04-27/: ranked.json
experiments/Dong/data/2026-05-09/: ranked.json
experiments/Dong/data/2026-05-10/: ranked.json
experiments/Dong/deep_dive/: cli.py  config.py  dedup.py  fetch.py  observe.py  rank.py  render.py  summarize.py
experiments/Dong/deep_dive/llm/: __init__.py  anthropic_backend.py  base.py  openai_backend.py
experiments/Dong/observations/: 2026-04-26.md
experiments/Dong/prompts/: observe_system.md  rank_system.md  summarize_system.md
experiments/Dong/site/: astro.config.mjs  package-lock.json  package.json
experiments/Dong/site/src/layouts/: Base.astro
experiments/Dong/site/src/pages/: index.astro
experiments/Jun/: .env.example  NOTES.md  config.json  design.md  pyproject.toml
experiments/Jun/briefs/: 2026-04-28.md
experiments/Jun/deep_dive/: __init__.py  __main__.py  cli.py  config.py  dedup.py  fetch.py  rank.py  render.py  summarize.py
experiments/Jun/deep_dive/llm/: __init__.py  anthropic_backend.py  base.py  openai_backend.py
experiments/Jun/site/: index.html
experiments/Jun/site/briefs/: 2026-04-28.html
experiments/Jun/templates/: brief.html  index.html
(+353 files in other folders)
