[project]
name = "deep-dive-dong"
version = "0.0.1"
description = "Dong's MVP for DeepDive — daily Agentic Software Engineering brief"
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.40.0",
  "feedparser>=6.0.10",
  "httpx>=0.27.0",
  "trafilatura>=1.12.0",
  "rapidfuzz>=3.10.0",
  "pyyaml>=6.0.1",
]

[tool.uv]
package = false
