[project]
name = "deep-dive"
version = "0.1.0"
description = "Insight Exploration - Daily Brief Generator"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
    "feedparser>=6.0.0",
    "beautifulsoup4>=4.12.0",
    "jinja2>=3.1.0",
    "anthropic>=0.18.0",
    "openai>=1.0.0",
]

[project.scripts]
deep-dive = "deep_dive.cli:main"